--- a/11-abstract/.vscode/settings.json
+++ b/11-abstract/.vscode/settings.json
@@ -3,6 +3,14 @@
         "memory": "cpp",
         "array": "cpp",
         "functional": "cpp",
-        "tuple": "cpp"
+        "tuple": "cpp",
+        "iosfwd": "cpp",
+        "type_traits": "cpp",
+        "bitset": "cpp",
+        "initializer_list": "cpp",
+        "string": "cpp",
+        "string_view": "cpp",
+        "__bit_reference": "cpp",
+        "iterator": "cpp"
     }
 }
